# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./events";
 export * from "./bulletin";
 export * from "./customSkins";
 export * from "./customBadges";
+export * from "./customBanners";
